--- a/content.html
+++ b/content.html
@@ -12,6 +12,34 @@
 </head>
 
 <body>
+    <!-- header -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <a class="navbar-brand" href="#">William Woodburn</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active ">
+                    <a class="nav-link" href="https://github.com/willwoodburn1" target="_blank">GitHub
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link"
+                        href="https://docs.google.com/document/d/1rrSigmS1L3b9DjIdhhbyNW-8J9H3i7aVheaojtA96hM/edit?usp=sharing"
+                        target="_blank">Resume
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://www.linkedin.com/in/will-woodburn-bb656b1ab"
+                        target="_blank">Linkedin
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 
 
 
