--- a/title.html
+++ b/title.html
@@ -13,9 +13,19 @@
 
 <body>
 
+    <img src="./images/code-screenshot.png" alt="code-snippet.png">
+
+    <div id="titles">
+        <h1> <strong> William Woodburn </strong> </h1>
+        <h2> <strong> Full Stack Web Developer - Portfolio Page </strong> </h2>
+        <button> Click here to view the content </button>
+    </div>
+
+    <img src="./images/code-screenshot.png" alt="code-snippet.png">
 
 
-    
+
+
 
     <!-- relevant links to external sites -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
