put all the necessary content onto the page

--- a/title.html
+++ b/title.html
@@ -8,20 +8,55 @@
     <!-- relevant link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="title.css" />
 </head>
 
 <body>
 
-    <img src="./images/code-screenshot.png" alt="code-snippet.png">
+    <!-- header
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="titlePageHeader">
+        <a class="navbar-brand" href="#">William Woodburn</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active ">
+                    <a class="nav-link" href="https://github.com/willwoodburn1" target="_blank">GitHub
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link"
+                        href="https://docs.google.com/document/d/1rrSigmS1L3b9DjIdhhbyNW-8J9H3i7aVheaojtA96hM/edit?usp=sharing"
+                        target="_blank">Resume
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://www.linkedin.com/in/will-woodburn-bb656b1ab"
+                        target="_blank">Linkedin
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    </nav> -->
+
+    <img class="codeImage" src="./images/code-screenshot.png" alt="code-snippet.png">
 
     <div id="titles">
         <h1> <strong> William Woodburn </strong> </h1>
         <h2> <strong> Full Stack Web Developer - Portfolio Page </strong> </h2>
-        <button> Click here to view the content </button>
+        <button id="titlePageButton"> Click here to view the content </button>
     </div>
 
-    <img src="./images/code-screenshot.png" alt="code-snippet.png">
+    <img class="codeImage" src="./images/code-screenshot.png" alt="code-snippet.png">
+
+    <footer id="titlePageFooter">
+        <p>Personal Code Portfolio for William Woodburn</p>
+        <p>Developed by </p>
+        <a href="https://github.com/willwoodburn1" target="_blank">William Woodburn</a>
+    </footer>
 
 
 
