added all the required content for the page

--- a/content.html
+++ b/content.html
@@ -8,12 +8,12 @@
     <!-- relevant link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="content.css" />
 </head>
 
 <body>
     <!-- header -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">William Woodburn</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,6 +41,214 @@
         </div>
     </nav>
 
+    <!-- carousel of Images -->
+    <div id="qwerty">
+        <div id="carouselBack">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/Bandear-Pic.png" class="d-block w-100" alt="Bandear">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Meal-Budgeter-Pic.png" class="d-block w-100" alt="Meal Budgeter">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Weather-Dashboard-Pic.png" class="d-block w-100" alt="Weather Dashboard">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Horiseon-Pic.png" class="d-block w-100" alt="Horiseon Website">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
+        <div id="rightBar">
+            <aside id="designedAppSideBar">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-4 leftContent">
+
+                            <div class="row">
+                                <div id="leftTopContainer" class="col box">
+                                    <aside id="leftTopContent">
+                                        <h3> <strong> <u> Designed Applications </u> </strong> </h3>
+
+                                        <!-- DropDown Link Bandear -->
+                                        <div class="dropdown">
+                                            <a class="nav-link dropdown-toggle" id="projectOneDropdownLink"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                Group Project 1: Bandear
+                                            </a>
+
+
+                                            <div class="dropdown-menu" id="projectOneLink"
+                                                aria-labelledby="navbarDropdownMenuLink">
+                                                <a class="dropdown-item"
+                                                    href="https://chrisjmckeown.github.io/BandEaR_Discover_live_artists/"
+                                                    target="_blank">
+                                                    Deployed
+                                                    Version</a>
+                                                <a class="dropdown-item"
+                                                    href="https://github.com/chrisjmckeown/BandEaR_Discover_live_artists"
+                                                    target="_blank">
+                                                    GitHub
+                                                    Repo</a>
+                                            </div>
+                                        </div>
+
+                                        <!-- DropDown Link Food Budgeter -->
+                                        <div class="dropdown">
+                                            <a class="nav-link dropdown-toggle" id="projectOneDropdownLink"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                Group Project 2: Food Budgeter
+                                            </a>
+
+
+                                            <div class="dropdown-menu" id="projectTwoLink"
+                                                aria-labelledby="navbarDropdownMenuLink">
+                                                <a class="dropdown-item" href="https://vast-crag-85624.herokuapp.com/"
+                                                    target="_blank">
+                                                    Deployed
+                                                    Version</a>
+                                                <a class="dropdown-item"
+                                                    href="https://github.com/willwoodburn1/Group-Project-2"
+                                                    target="_blank">
+                                                    GitHub
+                                                    Repo</a>
+                                            </div>
+                                        </div>
+
+
+                                        <!-- Dropdown Link Weather Forecast -->
+                                        <div class="dropdown">
+                                            <a class="nav-link dropdown-toggle" id="assignmentOneDropdownLink"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                Assignment: API Weather Forecast
+                                            </a>
+
+                                            <div class="dropdown-menu" id="assignmentOneLink"
+                                                aria-labelledby="navbarDropdownMenuLink">
+                                                <a class="dropdown-item"
+                                                    href="https://willwoodburn1.github.io/Week6-Homework"
+                                                    target="_blank">Deployed
+                                                    Version</a>
+                                                <a class="dropdown-item"
+                                                    href="https://github.com/willwoodburn1/Week6-Homework"
+                                                    target="_blank">
+                                                    GitHub
+                                                    Repo</a>
+                                            </div>
+                                        </div>
+
+                                        <!-- Dropdown Link Password Generator -->
+                                        <div class="dropdown">
+                                            <a class="nav-link dropdown-toggle" id="assignmentTwoDropdownLink"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                Assignment: Random Password Generator
+                                            </a>
+                                            <div class="dropdown-menu" id="assignment2Link"
+                                                aria-labelledby="navbarDropdownMenuLink">
+                                                <a class="dropdown-item"
+                                                    href="https://willwoodburn1.github.io/Week3-Homework"
+                                                    target="_blank">Deployed
+                                                    Version</a>
+                                                <a class="dropdown-item"
+                                                    href="https://github.com/willwoodburn1/Week3-Homework"
+                                                    target="_blank">GitHub
+                                                    Repo</a>
+                                            </div>
+                                        </div>
+
+                                    </aside>
+                                </div>
+                            </div>
+
+
+
+            </aside>
+
+            <div class="row">
+                <div id="leftBottomContainer" class="col box">
+                    <div id="leftBottomContent">
+                        <h3> <strong> <u>Contact Information</strong> </u> </strong> </h3>
+                        <p>
+                            <strong>Name: </strong> William Woodburn <br>
+                            <strong>DOB:</strong> 04/05/2000 <br>
+                            <strong>Email:</strong> woodburn.william1@gmail.com <br>
+                            <strong>Phone:</strong> 0497803106 <br>
+                            ----------------------- <br>
+                            GitHub, Linkedin, Resume provided above
+
+
+                        </p>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="brandStatement">
+        <h3> <strong> <u> Brand Statement </u> </strong> </h3>
+        <p>
+            My goal is to make an immediate impact in the business world and ameliorate my already
+            profound
+            knowledge of financials and technology to become an invaluable asset to a highly prestigious
+            organisation. Despite being relatively new to the professional job market, my resolve and
+            passion is
+            undeniable. <br>
+
+            I began undertaking studies of computer coding in my free time whilst completing a Bachelor
+            of
+            Business Degree at Monash University which clearly highlights my desire to succeed through
+            hard
+            work
+            and dedication. I have worked various part time jobs since I was thirteen which has allowed
+            me
+            to
+            develop crucial interpersonal skills that make me suitable for any workplace environment.
+            <br>
+
+            I have a strong skill set in mathematics and problem solving coupled with an innate desire
+            to
+            learn
+            from industry professionals. I am incredibly determined to ensure that I make the right
+            decisions
+            when entering into a professional position and thus will do whatever it takes to start my
+            career
+            on
+            the right foot.
+
+        </p>
+    </div>
+
+
+
+
+    <footer id="mainPageFooter">
+        <p>Personal Code Portfolio for William Woodburn</p>
+        <p>Developed by </p>
+        <a href="https://github.com/willwoodburn1" target="_blank">William Woodburn</a>
+    </footer>
+
 
 
 
@@ -53,7 +261,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="./content.js"></script>
 </body>
 
 </html>
