--- a/title.html
+++ b/title.html
@@ -13,50 +13,24 @@
 
 <body>
 
-    <!-- header
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="titlePageHeader">
-        <a class="navbar-brand" href="#">William Woodburn</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active ">
-                    <a class="nav-link" href="https://github.com/willwoodburn1" target="_blank">GitHub
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link"
-                        href="https://docs.google.com/document/d/1rrSigmS1L3b9DjIdhhbyNW-8J9H3i7aVheaojtA96hM/edit?usp=sharing"
-                        target="_blank">Resume
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="https://www.linkedin.com/in/will-woodburn-bb656b1ab"
-                        target="_blank">Linkedin
-                    </a>
-                </li>
+    <div class="titlePageContent">
+        <img class="codeImage" src="./images/code-screenshot.png" alt="code-snippet.png">
 
-            </ul>
+        <div id="titles">
+            <h1> <strong> William Woodburn </strong> </h1>
+            <h2> <strong> Full Stack Web Developer - Portfolio Page </strong> </h2>
+            <button id="titlePageButton"> Click here to view the content </button>
         </div>
-    </nav> -->
 
-    <img class="codeImage" src="./images/code-screenshot.png" alt="code-snippet.png">
-
-    <div id="titles">
-        <h1> <strong> William Woodburn </strong> </h1>
-        <h2> <strong> Full Stack Web Developer - Portfolio Page </strong> </h2>
-        <button id="titlePageButton"> Click here to view the content </button>
+        <img class="codeImage" src="./images/code-screenshot.png" alt="code-snippet.png">
     </div>
 
-    <img class="codeImage" src="./images/code-screenshot.png" alt="code-snippet.png">
-
-    <footer id="titlePageFooter">
+    <footer id="pageFooter">
         <p>Personal Code Portfolio for William Woodburn</p>
         <p>Developed by </p>
         <a href="https://github.com/willwoodburn1" target="_blank">William Woodburn</a>
     </footer>
+
 
 
 
