--- a/content.html
+++ b/content.html
@@ -61,6 +61,9 @@
                         <img src="images/Weather-Dashboard-Pic.png" class="d-block w-100" alt="Weather Dashboard">
                     </div>
                     <div class="carousel-item">
+                        <img src="images/Create-Recipe_pic.png" class="d-block w-100" alt="Create Recipe">
+                    </div>
+                    <div class="carousel-item">
                         <img src="images/Horiseon-Pic.png" class="d-block w-100" alt="Horiseon Website">
                     </div>
                 </div>
